--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -56,7 +56,7 @@ div {
 }
 
 div {
-    background-image: url("data:image/svg+xml,%3Csvg width='30px' height='30px' viewBox='0 0 30 30' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg transform='translate%28-128.000000, -59.000000%29' fill='%23F44336'%3E%3Cpolygon points='157.848404 61.9920213 145.980053 73.8603723 157.848404 85.7287234 154.856383 88.7207447 142.988032 76.8523936 131.119681 88.7207447 128.12766 85.7287234 139.996011 73.8603723 128.12766 61.9920213 131.119681 59 142.988032 70.8683511 154.856383 59'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
+    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' version='1.1' xmlns='http://www.w3.org/2000/svg'%3E%3Cg stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg transform='translate%28-128.000000, -59.000000%29' fill='%23F44336'%3E%3Cpolygon points='157.848404 61.9920213 145.980053 73.8603723 157.848404 85.7287234 154.856383 88.7207447 142.988032 76.8523936 131.119681 88.7207447 128.12766 85.7287234 139.996011 73.8603723 128.12766 61.9920213 131.119681 59 142.988032 70.8683511 154.856383 59'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
 
@@ -77,7 +77,7 @@ div {
 
 
 .fullwidth_over_centered_container {
-  margin-left: calc(50% - 50vw);
+  margin-left:  calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
 }
 
@@ -301,7 +301,7 @@ ol li:nth-child(n+7):nth-child(-n+14) {
   background: lightpink;
 }
 
-/* NO SELECTION / ALL SELECTION */
+/* NO SELECTION / COPY ALL SELECTION */
 
 .copy-no {
     -webkit-user-select: none;  /* Chrome all / Safari all */
