--- a/appZapp/app/styles/app.scss
+++ b/appZapp/app/styles/app.scss
@@ -38,4 +38,8 @@
     @import "rare-components/layout-body-wrap/layout-body-wrap";
     @import "rare-components/extra-compact-form/extra-compact-form";
 
+// -------------------------------------------- Pending
+
+    @import "components/swed-design/swed-design";
+
 /* EOF sass ordnung */
