--- a/appZapp/app/styles/components/swed-design/swed-design.scss
+++ b/appZapp/app/styles/components/swed-design/swed-design.scss
@@ -123,6 +123,127 @@ $colorSwedMedium: hsl(226, 17%, 20%);
     }
 }
 
+.swed-dropdown {
+
+    & {
+        position: relative;
+        z-index: 0;
+    }
+
+    .label {
+        position: relative;
+        z-index:  1;
+
+        line-height: 1.5;
+        padding:
+            0.25em 0.5em;
+
+        // has marker
+
+        display:     flex;
+        align-items: center;
+
+        &::after {
+            content: '';
+            display: block;
+            width:   1.5em;
+            height:  1.5em;
+            background-size:  100%;
+            background-image: url("data:image/svg+xml,%3Csvg fill%3D%22white%22 width%3D%2224%22 height%3D%2224%22 viewBox%3D%220 0 24 24%22 xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E %3Cpath d%3D%22M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z%22%2F%3E %3C%2Fsvg%3E");
+            transition: transform 240ms;
+            transform-origin: center center;
+        }
+    }
+    .droplist {
+        pointer-events: none;
+
+        position: absolute;
+        z-index:  0;
+        top:     -0.25em;
+        left:    -0.25em;
+        min-width: 100%;
+
+        // expanded clickable area
+
+        &::before {
+            display:  none;
+
+            content:  '';
+            position: absolute;
+            z-index: -2;
+            top:     -2em;
+            right:   -2em;
+            bottom:  -2em;
+            left:    -2em;
+        }
+
+        // background
+
+        &::after {
+            background-color: rgba(255,255,255,0.1);
+
+            content:  '';
+            position: absolute;
+            z-index: -1;
+            top:      0;
+            right:    0;
+            bottom:   0;
+            left:     0;
+
+            transform:  scale(0);
+            transform-origin: 1em 1em;
+            transition: transform 240ms;
+            transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045); /* easeInBack */
+        }
+
+        // content
+
+        &>ul {
+            opacity: 0;
+
+            list-style: none;
+            margin:     0;
+            padding:    0;
+            margin-top: 2.5em;
+            padding-bottom: 0.5em;
+
+            transition: opacity 240ms ease-out;
+
+            &>li {
+                white-space: nowrap;
+                padding: 0.25em 0.75em;
+                &:hover { background-color: rgba(0,0,0,0.25); }
+                &:hover>span,
+                &:hover>a {
+                    display: block;
+                    transform:  translateX(0.25em);
+                    transition: transform 240ms ease-in;
+                    transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
+                }
+            }
+        }
+    }
+
+    /* display action */
+
+    &.has-hover-action:hover,
+    &.is-active {
+        .label            { color: hsl(2,45%,65%); }
+        .label::after     { transform: rotate(180deg); }
+        .droplist         { pointer-events: all; }
+        .droplist::before { display: block; }
+        .droplist::after {
+            transform: scale(1);
+            transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
+        }
+        .droplist>ul {
+            opacity: 1;
+            transition: opacity 240ms ease-in;
+        }
+    }
+
+}
+
 .swed-group {
     display:         flex;
     flex-direction:  row;
