--- a/appZapp/app/styles/components/html-core/sass-workers.scss
+++ b/appZapp/app/styles/components/html-core/sass-workers.scss
@@ -45,5 +45,12 @@
     overflow:    hidden;
 }
 
+%link-style-as-inherit {
+    & ,&:link, &:visited, &:active, &:focus, &:hover {
+        color:           inherit;
+        text-decoration: inherit;
+    }
+}
+
 
 /* eof app scss constructor */
