--- a/appZapp/app/styles/components/swed-design/swed-design.scss
+++ b/appZapp/app/styles/components/swed-design/swed-design.scss
@@ -6,6 +6,13 @@ $colorSwedDark--text: hsla(0,0%,100%,0.75);
 $colorSwedLight:  hsl(204, 22%, 55%);
 $colorSwedMedium: hsl(226, 17%, 20%);
 
+$timing-function--easeInBack:  cubic-bezier(0.600, -0.280, 0.735, 0.045);
+$timing-function--easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
+$timing-function--focusZoom:   cubic-bezier(0.165, 0.84, 0.44, 1);
+$timing-function--jumpClose:   $timing-function--easeInBack;
+$timing-function--jumpOpen:    $timing-function--easeOutBack;
+
+
 .design-template--swed {
 
     background-color: $colorSwedDark;
@@ -13,17 +20,14 @@ $colorSwedMedium: hsl(226, 17%, 20%);
 
     .big-title {
         display:    block;
-        text-align: center;
         font-size:  2em;
     }
     .title {
         display:    block;
-        text-align: center;
         font-size:  1.5em;
     }
     .subtitle {
         @extend .has-sans-text;
-        text-align: center;
     }
 }
 
@@ -80,45 +84,47 @@ $colorSwedMedium: hsl(226, 17%, 20%);
 
 .swed-button {
 
+    // design
+
+    & ,&:link, &:visited, &:active, &:focus, &:hover {
+        background-color: white;
+        color:            black;
+        text-decoration:   none;
+        cursor:         default;
+    }
+    padding: 0.5em 1em;
+
+    // layout
+
     display: block;
-    background-color: white;
-    color: black;
-
-    .title {
-        line-height:   1;
-        padding:       0.75em 2em;
-        white-space:   nowrap;
-        overflow:      hidden;
-        text-overflow: ellipsis;
-    }
-    .icon {
-        display: block;
-        font-size: 1.5em;
-        padding:   0.75em;
-        line-height: 1;
-        &>*{
-            display: block;
-            transform: scale(2);
-        }
+    line-height: 1;
+    &>a {
+        @extend %link-style-as-inherit;
+        cursor: default;
     }
 
-    /* hover effect */
+    &::after {
+      content:  "";
+      position: absolute;
+      z-index:  -1;
+      top:       0;
+      left:      0;
+      width:  100%;
+      height: 100%;
+
+      opacity: 0;
+      box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+      transition: inherit;
+    }
+
+    // hover effect
+
     position:    relative;
     will-change: transform;
-    transition:  all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    &::after {
-        content: "";
-        position: absolute;
-        z-index: -1;
-        top:  0;
-        left: 0;
-        width:  100%;
-        height: 100%;
-        opacity: 0;
-        transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-    }
+    transition:  all 0.6s $timing-function--focusZoom;
     &:hover {
         transform: scale(1.25, 1.25);
+        z-index: 1;
         &::after { opacity: 1; }
     }
 }
@@ -179,7 +185,7 @@ $colorSwedMedium: hsl(226, 17%, 20%);
             transform:  scale(0);
             transform-origin: 1em 1em;
             transition: transform 240ms;
-            transition-timing-function: cubic-bezier(0.600, -0.280, 0.735, 0.045); /* easeInBack */
+            transition-timing-function: $timing-function--easeInBack;
         }
 
         // content
@@ -204,7 +210,7 @@ $colorSwedMedium: hsl(226, 17%, 20%);
                     display: block;
                     transform:  translateX(0.25em);
                     transition: transform 240ms ease-in;
-                    transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
+                    transition-timing-function: $timing-function--easeOutBack;
                 }
             }
         }
@@ -219,7 +225,7 @@ $colorSwedMedium: hsl(226, 17%, 20%);
         .droplist         { pointer-events: all; }
         .droplist::after {
             transform: scale(1);
-            transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
+            transition-timing-function: $timing-function--easeOutBack;
         }
         .droplist>ul {
             opacity: 1;
@@ -308,3 +314,67 @@ $colorSwedMedium: hsl(226, 17%, 20%);
     opacity: 1;
 }
 
+
+
+.swed-double-sticker-wrap {
+
+    --middle-gap-size: 8em;
+
+    display:    grid;
+    margin:   0 auto;
+    padding:  0 1rem;
+    grid-gap: 0 var(--middle-gap-size);
+    grid-template-columns: repeat(2, minmax( 12em, max-content ) );
+
+    &>.swed-sticker {
+        align-self: center;
+        &::after {
+            width: calc( 100% + 0.75*var(--middle-gap-size) );
+        }
+        &:nth-child(1)::after {
+            transform-origin: center right;
+        }
+        &:nth-child(2)::after {
+            transform-origin: center left;
+            left:  auto;
+            right: 0;
+        }
+        &:hover {
+            &:nth-child(1)::after {
+                transform:
+                    scale(1, 1.2)
+                    translate( calc( 0.25 * var(--middle-gap-size) * (-1) ), -1em);
+            }
+            &:nth-child(2)::after {
+                transform:
+                    scale(0.9, 1.2)
+                    translate( calc( 0.25 * var(--middle-gap-size) ), -1em);
+            }
+        }
+    }
+}
+.swed-sticker {
+
+    padding: 1em;
+    position: relative;
+
+    &::after {
+        content:  "";
+        pointer-events: none;
+        position: absolute;
+        z-index: -1;
+        top:    0;
+        left:   0;
+        width:  100%;
+        height: 100%;
+
+        background-color: $colorSwedAccent;
+        opacity: 0.25;
+        will-change: transform;
+        transition: all 800ms $timing-function--jumpOpen;
+    }
+
+    &:hover::after {
+        transform: scale(0.9, 1.2) translate(-15%,-10%);
+    }
+}
