--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -1,4 +1,5 @@
-@import url("part.css");
+@charset "utf-8";
+@import url('part.css');
 
 /* это тот же async только для .css */
 <link media="none" onload="if(media!="all") media="all"" rel="stylesheet" type="text/css", href= main.css>
@@ -76,6 +77,7 @@ div {
 
 
 
+/* плохо работает со скролбаром хрома */
 .fullwidth_over_centered_container {
   margin-left:  calc(50% - 50vw);
   margin-right: calc(50% - 50vw);
@@ -318,7 +320,7 @@ ol li:nth-child(n+7):nth-child(-n+14) {
 
 /* CSS COUNTER */
 
-faq {
+.faq {
     counter-reset: my-badass-counter;
 }
 .faq dt:before {
@@ -428,3 +430,25 @@ flex-basis: calc(560px * 999 - 100% * 999)
   vendor
 
 */
+
+
+/* SASS dataset pattern */
+
+// VARIABLES
+$c: ".c-social-button";
+$networks: facebook, google, messenger, twitter;
+// THE DATASET FOR SOCIAL COLORS
+$socialColors: (
+	facebook: #3b5998,
+	google: #db4437,
+	messenger: #db4437,
+	twitter: #1da1f2
+);
+#{$c} {
+	// --> NETWORKS <--
+	@each $network in $networks {
+		&--#{network} {
+			background: map-get($socialColors, $network);
+		}
+	}
+}
