--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -76,12 +76,22 @@ div {
 }
 
 
-
-/* плохо работает со скролбаром хрома */
-.fullwidth_over_centered_container {
-  margin-left:  calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
+/* inline background */
+h1 {
+  max-width: 300px;
+  font-family: Verdana;
 }
+
+h1 span {
+  background: blue;
+  color: white;
+  padding: 12px 12px;
+  line-height: 1.4;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+
+
 
 /* Focused shadow */
 
