--- a/appZapp/app/styles/app.css
+++ b/appZapp/app/styles/app.css
@@ -10,7 +10,7 @@
 /* eof required settings */
 /* ==============================================================
     app sass constructor - mixins and/or copy-paste templates
-    2019.2.8
+    2019.6.26
 ============================================================== */
 .swed-button > a, .swed-button > a:link, .swed-button > a:visited, .swed-button > a:active, .swed-button > a:focus, .swed-button > a:hover {
   color: inherit;
@@ -1485,6 +1485,42 @@ html[sakura], html.sakura {
 .sakura-content > .layer, [sakura-content] > .layer {
   grid-column: full; }
 
+/* ==============================================================
+    ATOMS
+    small components useful everywhere
+    2019.6.26
+============================================================== */
+.has-icon::before {
+  content: '';
+  display: inline-flex;
+  line-height: inherit;
+  vertical-align: middle;
+  width: 1.5em;
+  height: 1.5em;
+  margin-right: 0.25em;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+  background-image: var(--icon-image); }
+
+.has-icon {
+  --icon-image: none; }
+  .has-icon.email {
+    --icon-image: url("data:image/svg+xml,%3Csvg fill='white' width='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z'/%3E%3C/svg%3E"); }
+  .has-icon.phone {
+    --icon-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z'/%3E%3C/svg%3E"); }
+  .has-icon.skype {
+    --icon-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' width='88' height='88' viewBox='-12 -12 88 88'%3E%3Cpath d='M61.732 37.29c0 .084 0 .252-.084.336l-.084-.588c0 .084.084.168.168.252.336-1.764.504-3.612.504-5.46 0-4.115-.84-8.063-2.352-11.76-1.512-3.612-3.696-6.803-6.467-9.575s-5.963-4.955-9.575-6.467C40.147 2.436 36.2 1.68 32.084 1.68a32.1 32.1 0 0 0-5.711.504c.084.084.252.084.336.168l-.672-.084c.084 0 .252-.084.336-.084C23.685.84 20.83.084 17.9.084c-4.787 0-9.24 1.848-12.682 5.207C1.848 8.65 0 13.186 0 17.974c0 3.024.756 6.047 2.268 8.65 0-.084 0-.252.084-.336l.084.672c-.084-.084-.084-.168-.168-.336-.336 1.68-.42 3.444-.42 5.207 0 4.115.84 8.063 2.352 11.76 1.512 3.612 3.696 6.803 6.467 9.575s5.963 4.955 9.575 6.467c3.696 1.596 7.643 2.352 11.76 2.352a28.22 28.22 0 0 0 5.291-.504c-.084-.084-.168-.084-.336-.168l.672.084c-.084 0-.252 0-.336.084a17.22 17.22 0 0 0 8.819 2.436c4.787 0 9.24-1.848 12.682-5.207C62.152 55.35 64 50.814 64 46.026c0-3.024-.84-6.047-2.268-8.735zM32.084 50.3c-10.75 0-15.538-5.29-15.538-9.24 0-2.016 1.512-3.444 3.528-3.444 4.62 0 3.444 6.635 12 6.635 4.367 0 6.803-2.352 6.803-4.787 0-1.428-.756-3.108-3.612-3.78L25.7 33.344c-7.727-1.932-9.07-6.047-9.07-9.995 0-8.147 7.643-11.17 14.782-11.17 6.635 0 14.362 3.612 14.362 8.483 0 2.1-1.764 3.276-3.864 3.276-3.948 0-3.192-5.46-11.087-5.46-3.948 0-6.047 1.764-6.047 4.283s3.108 3.36 5.795 3.948l7.055 1.596c7.727 1.764 9.743 6.215 9.743 10.5 0 6.635-5.04 11.507-15.286 11.507zm4.87 11.087c.084.084.168.084.336.168.084 0 .252 0 .336-.084zm24.693-23.77c0-.084 0-.252.084-.336-.084-.084-.084-.168-.168-.336zM2.268 26.29c0 .084 0 .252-.084.336.084.084.084.168.168.336zM26.625 2.352c-.084-.084-.168-.084-.336-.168-.084 0-.252.084-.336.084z'/%3E%3C/svg%3E%0A"); }
+
+/*
+.has-icon.email {
+    --icon-image: url("data:image/svg+xml,%3Csvg fill='black' width='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z'/%3E%3C/svg%3E");
+}
+.has-icon.phone {
+    --icon-image: url("data:image/svg+xml,%3Csvg fill='black' xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z'/%3E%3C/svg%3E");
+}
+*/
+/* EOF ATOMS */
 /* ==============================================================
     box model for HTML & BODY
     2018.12.7
