--- a/appZapp/app/styles/app.scss
+++ b/appZapp/app/styles/app.scss
@@ -32,6 +32,8 @@
 
     @import "components/design-sakura/design-sakura";
 
+    @import "components/html-core/css-atoms";
+
 
 // -------------------------------------------- Rare Components
 
