--- a/appZapp/app/styles/components/html-core/sass-workers.scss
+++ b/appZapp/app/styles/components/html-core/sass-workers.scss
@@ -1,7 +1,30 @@
 /* ==============================================================
     app sass constructor - mixins and/or copy-paste templates
-    2019.2.8
+    2019.6.26
 ============================================================== */
+
+
+/// Replace `$search` with `$replace` in `$string`
+/// @author Hugo Giraudel
+/// @param {String} $string - Initial string
+/// @param {String} $search - Substring to replace
+/// @param {String} $replace ('') - New value
+/// @return {String} - Updated string
+@function str-replace($string, $search, $replace: '') {
+  $index: str-index($string, $search);
+  
+  @if $index {
+    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+  }
+  
+  @return $string;
+  /* usage
+    .selector {
+      $string: 'The answer to life the universe and everything is 42.';
+      content: str-replace($string, 'e', 'xoxo');
+    }
+  */
+}
 
 
 @mixin contentbox--xy-centered {
