icons with data:image

--- a/appZapp/app/styles/components/html-core/css-workers.scss
+++ b/appZapp/app/styles/components/html-core/css-workers.scss
@@ -37,6 +37,14 @@
     .zetka & { grid-column: full; }
 }
 
+.text-is-smaller {
+    font-size: 0.75em;
+}
+.text-is-bigger {
+    font-size: 1.33333em;
+}
+
+
 /* ------------------------------------------ compact mode helpers */
 
 
