--- a/appZapp/app/styles/components/html-core/sass-workers.scss
+++ b/appZapp/app/styles/components/html-core/sass-workers.scss
@@ -10,18 +10,18 @@
 /// @param {String} $search - Substring to replace
 /// @param {String} $replace ('') - New value
 /// @return {String} - Updated string
-@function str-replace($string, $search, $replace: '') {
+@function function-replace-in-string($string, $search, $replace: '') {
   $index: str-index($string, $search);
   
   @if $index {
-    @return str-slice($string, 1, $index - 1) + $replace + str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
+    @return str-slice($string, 1, $index - 1) + $replace + function-replace-in-string(str-slice($string, $index + str-length($search)), $search, $replace);
   }
   
   @return $string;
   /* usage
     .selector {
       $string: 'The answer to life the universe and everything is 42.';
-      content: str-replace($string, 'e', 'xoxo');
+      content: function-replace-in-string($string, 'e', 'xoxo');
     }
   */
 }
